--- a/PORTFOLIO/Pliki_do_Portfolio_Lab/notebooks/01_Pobieranie_danych.ipynb
+++ b/PORTFOLIO/Pliki_do_Portfolio_Lab/notebooks/01_Pobieranie_danych.ipynb
@@ -21,7 +21,7 @@
     "\n",
     " Wszystkie te źródła musimy pobrać, aby być w stanie wykonać całość warsztatu. W celu pobrania informacji, gdzie wymagany jest paramatr `airportId`, posłużymy się listą z pliku `airports.csv`.\n",
     "\n",
-    " Przy wykonywaniu tego zadania możesz posłużyć się tym tokenem: `iKRsQ8vdqgT903o2vH1rsejOeQ0F7YC9TvutH6Wk`.\n",
+    " Przy wykonywaniu tego zadania możesz posłużyć się tym tokenem: ``.\n",
     "\n",
     " ### Uwagi\n",
     " - Ze względów ćwiczeniowych, konstrukcja poszczególnych endpointów jest różna – w trakcie pracy dokładnie przyjrzyj się, w jaki sposób należy wykonać zapytanie, aby otrzymać odpowiedź.\n",
