System raportująco-analityczny

--- a/PORTFOLIO/Pliki_do_Portfolio_Lab/notebooks/01_Pobieranie_danych.ipynb
+++ b/PORTFOLIO/Pliki_do_Portfolio_Lab/notebooks/01_Pobieranie_danych.ipynb
@@ -45,24 +45,72 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
-   "metadata": {},
+   "metadata": {
+    "jupyter": {
+     "is_executing": true
+    }
+   },
+   "source": [
+    "from urllib import response\n",
+    "import responses\n",
+    "import requests    # tokeny autoryzacyjne\n",
+    "import pandas as pd    # do wczytania csv\n",
+    "import time    # do opóźnień między kolejnymi żądaniami do API\n",
+    "import json    # ta bibl. pomoże w ich przetwarzaniu danych API\n",
+    "import sqlalchemy    # do wgrywania zebranych danych do bazy danych\n",
+    "import logging    # do logowania błędów, np. przekroczenia limitu API\n",
+    "from dotenv import load_dotenv\n",
+    "import os"
+   ],
    "outputs": [],
-   "source": []
+   "execution_count": null
   },
   {
    "cell_type": "markdown",
    "metadata": {},
-   "source": [
-    " Tutaj zdefiniuj paramatry połączenia do API"
-   ]
+   "source": " Tutaj zdefiniuj parametry połączenia do API"
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
-   "metadata": {},
+   "metadata": {
+    "jupyter": {
+     "is_executing": true
+    }
+   },
+   "source": [
+    "load_dotenv()\n",
+    "\n",
+    "API_TOKEN = os.getenv(\"API_TOKEN\")\n",
+    "BASE_URL = os.getenv(\"BASE_URL\")\n",
+    "TIMEOUT = int(os.getenv(\"TIMEOUT\", 10))\n",
+    "\n",
+    "HEADERS = {\"Authorization\": f\"Bearer {API_TOKEN}\"}\n",
+    "\n",
+    "def get_request(endpoint, params=None):\n",
+    "    url = f\"{BASE_URL}/endpoint\"\n",
+    "    try:\n",
+    "        # żądanie get do API\n",
+    "        response = requests.get(url, headers=HEADERS, params=params, timeout=TIMEOUT)\n",
+    "        response.raise_for_status()\n",
+    "        return response.json()\n",
+    "    except requests.exceptions.RequestException as e:\n",
+    "        print(f\"Błąd podczas żądania API: {e}\")\n",
+    "        return None\n",
+    "\n",
+    "# # spr odpowiedzi\n",
+    "# if response.status_code == 200:\n",
+    "#     print(\"Połączenie się udało!\")\n",
+    "#     print(response.json())\n",
+    "#\n",
+    "# else:\n",
+    "#     print(f\"Błąd połaczenia{response.status_code}: {response.text}\")\n",
+    "\n",
+    "print(HEADERS)\n",
+    "print(API_TOKEN)\n",
+    "print(BASE_URL)"
+   ],
    "outputs": [],
-   "source": []
+   "execution_count": null
   },
   {
    "cell_type": "markdown",
@@ -73,10 +121,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
-   "metadata": {},
+   "metadata": {
+    "jupyter": {
+     "is_executing": true
+    }
+   },
+   "source": [
+    "airports_df = pd.read_csv(r\"C:\\AAAAAAAAAAAa\\CODERSLAB\\KURS_ANALITYK\\PORTFOLIO\\Pliki_do_Portfolio_Lab\\data\\airports.csv\")\n",
+    "\n",
+    "columns={\"origin_airport_id\": \"airportId\"}\n",
+    "airports_df = airports_df.rename(columns=columns)\n",
+    "\n",
+    "\n",
+    "print(airports_df.columns)\n",
+    "print(airports_df.head())"
+   ],
    "outputs": [],
-   "source": []
+   "execution_count": null
   },
   {
    "cell_type": "markdown",
@@ -101,10 +162,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "jupyter": {
+     "is_executing": true
+    }
+   },
+   "source": [
+    "\n",
+    "/api/v2/airport/{airportId}"
+   ],
    "outputs": [],
-   "source": []
+   "execution_count": null
   },
   {
    "cell_type": "markdown",
