System raportująco-analityczny

--- a/PORTFOLIO/Pliki_do_Portfolio_Lab/notebooks/01_Pobieranie_danych.ipynb
+++ b/PORTFOLIO/Pliki_do_Portfolio_Lab/notebooks/01_Pobieranie_danych.ipynb
@@ -135,7 +135,8 @@
     "\n",
     "\n",
     "print(airports_df.columns)\n",
-    "print(airports_df.head())"
+    "print(airports_df.head())\n",
+    "print(airports_df)"
    ],
    "outputs": [],
    "execution_count": null
