--- a/PORTFOLIO/Pliki_do_Portfolio_Lab/notebooks/01_Pobieranie_danych.ipynb
+++ b/PORTFOLIO/Pliki_do_Portfolio_Lab/notebooks/01_Pobieranie_danych.ipynb
@@ -136,7 +136,8 @@
     "\n",
     "print(airports_df.columns)\n",
     "print(airports_df.head())\n",
-    "print(airports_df)"
+    "print(airports_df)\n",
+    "print(airports_df.shape)"
    ],
    "outputs": [],
    "execution_count": null
