System raportująco-analityczny

--- a/PORTFOLIO/Pliki_do_Portfolio_Lab/notebooks/01_Pobieranie_danych.ipynb
+++ b/PORTFOLIO/Pliki_do_Portfolio_Lab/notebooks/01_Pobieranie_danych.ipynb
@@ -46,11 +46,15 @@
   {
    "cell_type": "code",
    "metadata": {
-    "jupyter": {
-     "is_executing": true
+    "ExecuteTime": {
+     "end_time": "2025-01-04T21:30:37.106674Z",
+     "start_time": "2025-01-04T21:30:37.079700Z"
     }
    },
    "source": [
+    "import os\n",
+    "import selenium\n",
+    "import token\n",
     "from urllib import response\n",
     "import responses\n",
     "import requests    # tokeny autoryzacyjne\n",
@@ -59,57 +63,201 @@
     "import json    # ta bibl. pomoże w ich przetwarzaniu danych API\n",
     "import sqlalchemy    # do wgrywania zebranych danych do bazy danych\n",
     "import logging    # do logowania błędów, np. przekroczenia limitu API\n",
+    "from selenium import webdriver\n",
+    "from selenium.webdriver.common.by import By\n",
+    "from selenium.webdriver.support.ui import WebDriverWait\n",
+    "from selenium.webdriver.support import expected_conditions as EC\n",
+    "from selenium.common.exceptions import NoSuchElementException\n",
+    "from selenium.common.exceptions import NoSuchWindowException\n",
+    "from selenium.webdriver.chrome.service import Service\n",
+    "from webdriver_manager.chrome import ChromeDriverManager\n",
+    "from bs4 import BeautifulSoup\n",
     "from dotenv import load_dotenv\n",
-    "import os"
+    "import csv\n"
    ],
    "outputs": [],
-   "execution_count": null
+   "execution_count": 326
   },
   {
-   "cell_type": "markdown",
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2025-01-04T21:44:12.910300Z",
+     "start_time": "2025-01-04T21:30:42.104108Z"
+    }
+   },
+   "cell_type": "code",
+   "source": [
+    "output_directory = \"C:\\\\AAAAAAAAAAAa\\\\CODERSLAB\\\\KURS_ANALITYK\\\\PORTFOLIO\\\\Pliki_do_Portfolio_Lab\\\\data\\\\Airport\"\n",
+    "\n",
+    "# pobieranie z csv\n",
+    "airports_ids = pd.read_csv(os.path.join(output_directory, \"airports.csv\"))[\"origin_airport_id\"].tolist()\n",
+    "print(airports_ids)\n",
+    "\n",
+    "url = \"https://api-datalab.coderslab.com/v2/docs/#\"\n",
+    "\n",
+    "\n",
+    "# konfiguracja chromedriver\n",
+    "options = webdriver.ChromeOptions()\n",
+    "prefs = {\"download.default_directory\": output_directory}\n",
+    "options.add_experimental_option(\"prefs\", prefs)\n",
+    "driver = webdriver.Chrome(options=options)\n",
+    "print(\"start processing\")\n",
+    "\n",
+    "\n",
+    "# utworzenie list do rozdzielenia pustych i pełnych lotnisk\n",
+    "airport_data = []\n",
+    "failed_airports = []\n",
+    "\n",
+    "\n",
+    "def download_and_clear(driver):\n",
+    "    try:\n",
+    "        download_button = WebDriverWait(driver, 10).until(EC.element_to_be_clickable((By.CSS_SELECTOR, \"div.download-contents\")))\n",
+    "        driver.execute_script(\"arguments[0].scrollIntoView(true);\", download_button)\n",
+    "        driver.execute_script(\"arguments[0].click();\", download_button)\n",
+    "\n",
+    "        clear_button = WebDriverWait(driver, 10).until(EC.element_to_be_clickable((By.CSS_SELECTOR, \".btn.btn-clear.opblock-control__btn\")))\n",
+    "        clear_button.click()\n",
+    "\n",
+    "        WebDriverWait(driver, 10).until_not(EC.element_to_be_clickable((By.CSS_SELECTOR, \".btn.btn-clear.opblock-control__btn\")))\n",
+    "\n",
+    "\n",
+    "    except Exception as e:\n",
+    "        print(f'Wystąpił błąd: {str(e)}')\n",
+    "        failed_airports.append(error_entry)\n",
+    "\n",
+    "\n",
+    "try:\n",
+    "    AUTH_TOKEN = os.getenv(\"AUTH_TOKEN\")\n",
+    "    if not AUTH_TOKEN:\n",
+    "        raise ValueError(\"Brak tokenu autoryzacyjnego\")\n",
+    "    driver.get(url)\n",
+    "\n",
+    "    # autoryzacja\n",
+    "    authorize_button = WebDriverWait(driver, 10).until(EC.element_to_be_clickable((By.CSS_SELECTOR, \".btn.authorize.unlocked span\")))\n",
+    "    authorize_button.click()\n",
+    "\n",
+    "    # wprowadzenie tokenu w okno\n",
+    "    token_input = WebDriverWait(driver, 10).until(EC.presence_of_element_located((By.CSS_SELECTOR, \".auth-container input[type=text]\")))\n",
+    "    token_input.send_keys(AUTH_TOKEN)\n",
+    "    print(\"token wprowadzony\")\n",
+    "\n",
+    "    # kliknięcie Authorize\n",
+    "    authorizeButton = WebDriverWait(driver, 10).until(EC.element_to_be_clickable((By.CSS_SELECTOR, \".btn.modal-btn.auth.authorize.button\")))\n",
+    "    authorizeButton.click()\n",
+    "\n",
+    "    # kliknięcie Close\n",
+    "    close_button = WebDriverWait(driver, 10).until(EC.element_to_be_clickable((By.CSS_SELECTOR, \".btn.modal-btn.auth.btn-done.button\")))\n",
+    "    close_button.click()\n",
+    "\n",
+    "    # klik na get airport\n",
+    "    get_button = WebDriverWait(driver, 10).until(EC.element_to_be_clickable((By.CSS_SELECTOR, \".opblock-summary-method\")))\n",
+    "    get_button.click()\n",
+    "\n",
+    "    # klik na try-it-out\n",
+    "    try_button = WebDriverWait(driver, 10).until(EC.element_to_be_clickable((By.CSS_SELECTOR, \".btn.try-out__btn\")))\n",
+    "    # przewijanie strony do buttona\n",
+    "    driver.execute_script(\"arguments[0].scrollIntoView(true);\", try_button)\n",
+    "    try_button.click()\n",
+    "\n",
+    "\n",
+    "    # iteracja po Id\n",
+    "    for airport_id in airports_ids:\n",
+    "        try:\n",
+    "            # wyszukanie pola tekstowego do airportId\n",
+    "            airportId_input = WebDriverWait(driver, 10).until(EC.presence_of_element_located((By.CSS_SELECTOR, \".parameters-col_description input[placeholder='airportId']\")))\n",
+    "            airportId_input.clear()\n",
+    "            airportId_input.send_keys(str(airport_id))\n",
+    "\n",
+    "            # klik execute\n",
+    "            execute_button = WebDriverWait(driver, 10).until(EC.element_to_be_clickable((By.CSS_SELECTOR, \".btn.execute.opblock-control__btn\")))\n",
+    "            execute_button.click()\n",
+    "\n",
+    "            #pobranie odpowiedzi (zmiana)\n",
+    "            response_status_element = WebDriverWait(driver, 10).until(EC.presence_of_element_located((By.CSS_SELECTOR, \"tbody .response .response-col_status\")))\n",
+    "            response_text = response_status_element.text.strip()\n",
+    "\n",
+    "            #element odpowiedzi z danymi json lub text\n",
+    "            response_body_element = WebDriverWait(driver, 10).until(EC.presence_of_element_located((By.CSS_SELECTOR, \"tbody .response .response-col_description pre\")))\n",
+    "            response_body = response_body_element.text.strip()\n",
+    "\n",
+    "            # dodawanie do list na podstawie odpowiedzi\n",
+    "            if response_text == \"200\":\n",
+    "                # airport_data.append({'airport_id': airport_id, 'response_text': response_text})\n",
+    "                response_data = json.loads(response_body) # konwersja stringa na json\n",
+    "\n",
+    "                # model danych szablon danych\n",
+    "                airport_entry = {\n",
+    "                    \"ORIGIN_AIRPORT_ID\": response_data.get(\"ORIGIN_AIRPORT_ID\", airport_id),\n",
+    "                    \"DISPLAY_AIRPORT_NAME\": response_data.get(\"DISPLAY_AIRPORT_NAME\", \"Brak danych\"),\n",
+    "                    \"ORIGIN_CITY_NAME\":response_data.get(\"ORIGIN_CITY_NAME\", \"Brak danych\") ,\n",
+    "                    \"NAME\": response_data.get(\"NAME\", \"Brak danych\")\n",
+    "                }\n",
+    "                if airport_entry not in airport_data:\n",
+    "                    airport_data.append(airport_entry)\n",
+    "\n",
+    "            elif response_text == \"400\":\n",
+    "                error_entry = {\n",
+    "                    \"error\": f\"Airport with id {airport_id} not exist\"\n",
+    "                }\n",
+    "                failed_airports.append(error_entry)\n",
+    "\n",
+    "            download_and_clear(driver)\n",
+    "\n",
+    "\n",
+    "        except Exception as e:\n",
+    "            error_entry = {\n",
+    "                \"airport_id\": airport_id,\n",
+    "                \"error\": str(e)\n",
+    "            }\n",
+    "            failed_airports.append({error_entry: str(e)})\n",
+    "\n",
+    "finally:\n",
+    "    # zapisanie wyników\n",
+    "    with open(os.path.join(output_directory, 'airport_data.json'), 'w', encoding='utf-8') as file:\n",
+    "        json.dump(airport_data, file, ensure_ascii=False, indent=4)\n",
+    "    with open(os.path.join(output_directory, 'failed_airports.json'), 'w', encoding='utf-8') as file:\n",
+    "        json.dump(failed_airports, file, ensure_ascii=False, indent=4)\n",
+    "\n",
+    "    # podsumowanie\n",
+    "    print(\"\\n*** Podsumowanie ***\")\n",
+    "    print(f\"Poprawnie przetworzone: {len(airport_data)} lotniska, niepoprawne: {len(failed_airports)}\")\n",
+    "\n",
+    "    # zamykanie przeglądarki\n",
+    "    if driver:\n",
+    "        driver.quit()\n",
+    "        print(\"end processing\")"
+   ],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[10874, 11233, 13360, 15008, 11638, 14150, 15323, 14814, 12007, 11337, 13342, 15070, 13244, 12280, 15096, 11641, 13832, 10268, 10397, 15041, 10529, 12119, 11537, 11092, 10581, 13829, 15389, 10140, 12389, 11648, 15023, 11982, 10967, 11525, 10792, 14259, 11637, 10466, 10599, 10208, 15841, 14831, 12898, 13241, 13367, 11481, 14108, 13931, 13873, 10157, 10245, 11146, 13277, 11292, 11109, 13459, 11775, 16218, 14698, 14252, 13256, 13139, 12250, 11259, 11468, 14952, 12402, 14574, 11996, 11977, 11867, 11203, 11995, 15016, 10747, 14905, 12012, 14783, 14730, 10431, 10434, 16869, 10408, 12264, 11618, 15304, 13577, 12954, 11624, 13541, 13422, 14057, 13232, 10800, 14689, 12391, 10868, 14711, 10257, 11067, 10562, 11695, 13796, 14109, 13970, 14193, 11076, 14092, 11122, 11288, 11308, 10754, 12884, 15376, 14588, 11884, 12915, 13851, 14843, 11603, 14457, 12206, 11252, 11905, 15412, 14120, 11980, 14025, 11150, 14709, 15897, 14107, 14006, 14747, 12902, 13061, 12016, 14794, 11921, 10731, 14828, 12889, 12441, 14802, 13230, 10631, 14492, 10141, 13204, 12992, 13184, 10643, 10333, 12255, 14487, 12129, 10551, 13871, 14256, 11066, 13377, 13487, 10627, 12335, 14633, 11274, 14543, 10299, 10158, 12951, 14004, 12544, 10739, 10165, 13964, 14314, 10990, 14812, 12339, 10561, 10146, 12451, 15991, 11423, 15401, 11587, 14520, 11042, 10185, 11278, 14534, 14100, 14321, 11111, 15024, 12917, 12124, 12523, 10821, 10721, 11630, 10170, 12448, 12953, 10918, 15356, 13344, 10676, 10926, 14307, 14635, 12156, 12244, 10666, 11612, 13476, 13029, 11267, 15411, 14986, 11471, 12758, 14576, 10155, 13486, 14716, 13296, 11283, 10732, 12266, 12892, 11003, 12094, 14685, 13158, 13121, 11540, 14877, 12217, 11697, 10372, 13264, 10469, 11336, 14683, 14112, 13502, 14524, 15027, 11973, 12173, 10361, 13388, 13891, 10577, 11433, 13290, 11298, 14771, 11577, 11140, 11057, 15048, 14960, 15295, 11865, 14893, 11049, 13495, 11953, 12223, 14254, 11823, 15380, 11447, 12003, 14489, 14908, 11986, 14082, 12191, 14113, 12891, 15249, 12819, 14570, 12323, 14679, 12343, 13076, 11503, 11617, 10728, 10785, 14869, 14027, 14674, 12197, 14696, 13485, 10781, 10849, 14955, 13433, 15074, 13127, 11013, 14122, 10154, 10980, 14098, 12982, 14512, 12278, 15919, 12478, 13830, 13933, 13930, 11997, 11027, 15582, 11721, 12896, 10279, 11778, 12888, 14262, 11415, 10685, 14842, 14761, 11193, 12265, 14288, 10713, 12397, 15624, 10994, 10409, 12519, 10136, 15607, 14237, 10779, 11898, 11413, 13983, 10558, 10620, 14222, 13198, 10423, 11097, 15454, 15370, 12899, 10135, 12177, 13303, 13795, 10693, 12945, 12511]\n",
+      "start processing\n",
+      "token wprowadzony\n",
+      "\n",
+      "*** Podsumowanie ***\n",
+      "Poprawnie przetworzone: 104 lotniska, niepoprawne: 260\n",
+      "end processing\n"
+     ]
+    }
+   ],
+   "execution_count": 327
+  },
+  {
    "metadata": {},
+   "cell_type": "markdown",
    "source": " Tutaj zdefiniuj parametry połączenia do API"
   },
   {
    "cell_type": "code",
    "metadata": {
-    "jupyter": {
-     "is_executing": true
+    "ExecuteTime": {
+     "end_time": "2025-01-04T02:15:38.471865Z",
+     "start_time": "2025-01-04T02:15:38.466023Z"
     }
    },
-   "source": [
-    "load_dotenv()\n",
-    "\n",
-    "API_TOKEN = os.getenv(\"API_TOKEN\")\n",
-    "BASE_URL = os.getenv(\"BASE_URL\")\n",
-    "TIMEOUT = int(os.getenv(\"TIMEOUT\", 10))\n",
-    "\n",
-    "HEADERS = {\"Authorization\": f\"Bearer {API_TOKEN}\"}\n",
-    "\n",
-    "def get_request(endpoint, params=None):\n",
-    "    url = f\"{BASE_URL}/endpoint\"\n",
-    "    try:\n",
-    "        # żądanie get do API\n",
-    "        response = requests.get(url, headers=HEADERS, params=params, timeout=TIMEOUT)\n",
-    "        response.raise_for_status()\n",
-    "        return response.json()\n",
-    "    except requests.exceptions.RequestException as e:\n",
-    "        print(f\"Błąd podczas żądania API: {e}\")\n",
-    "        return None\n",
-    "\n",
-    "# # spr odpowiedzi\n",
-    "# if response.status_code == 200:\n",
-    "#     print(\"Połączenie się udało!\")\n",
-    "#     print(response.json())\n",
-    "#\n",
-    "# else:\n",
-    "#     print(f\"Błąd połaczenia{response.status_code}: {response.text}\")\n",
-    "\n",
-    "\n",
-    "print(HEADERS)\n",
-    "print(API_TOKEN)\n",
-    "print(BASE_URL)"
-   ],
+   "source": "# powyżej jest kod",
    "outputs": [],
    "execution_count": null
   },
@@ -127,18 +275,7 @@
      "is_executing": true
     }
    },
-   "source": [
-    "airports_df = pd.read_csv(r\"C:\\AAAAAAAAAAAa\\CODERSLAB\\KURS_ANALITYK\\PORTFOLIO\\Pliki_do_Portfolio_Lab\\data\\airports.csv\")\n",
-    "\n",
-    "columns={\"origin_airport_id\": \"airportId\"}\n",
-    "airports_df = airports_df.rename(columns=columns)\n",
-    "\n",
-    "\n",
-    "print(airports_df.columns)\n",
-    "print(airports_df.head())\n",
-    "print(airports_df)\n",
-    "print(airports_df.shape)"
-   ],
+   "source": "# powyżej jest kod",
    "outputs": [],
    "execution_count": null
   },
@@ -164,19 +301,72 @@
    ]
   },
   {
-   "cell_type": "code",
    "metadata": {
-    "jupyter": {
-     "is_executing": true
+    "ExecuteTime": {
+     "end_time": "2025-01-04T21:49:09.127600Z",
+     "start_time": "2025-01-04T21:49:00.826225Z"
     }
    },
+   "cell_type": "code",
    "source": [
-    "# do dokończenia\n",
+    "# wczytanie danych z pliku json w postaci słowników\n",
+    "with open(os.path.join(output_directory, 'airport_data.json'), 'r', encoding='utf-8') as json_file:\n",
+    "    data = json.load(json_file) # załadunek danych z pliku json\n",
+    "    # print(data)\n",
     "\n",
-    "/api/v2/airport/{airportId}"
+    "# konwertowanie danych do ramki metodą from_records\n",
+    "airport_df = pd.DataFrame.from_records(data)\n",
+    "\n",
+    "# zapis wyniku do csv   (os.path.join(output_directory,\n",
+    "airport_df.to_csv(os.path.join(output_directory,\"airport_data.csv\"), index=False, encoding='utf-8')\n",
+    "print(\"Zapisano plik airport_data.csv\")\n",
+    "print(airport_df.shape)\n",
+    "\n",
+    "# print(airport_df)\n",
+    "print(airport_df.columns)\n",
+    "# print(airport_df.head())\n",
+    "\n",
+    "# spr czy są braki danych NaN\n",
+    "print(airport_df.isnull().sum())\n",
+    "\n",
+    "print(\"\\n***   *** ***\")\n",
+    "# wyszukanie i zliczenie wierszy \"Brak danych\" any axis sprawdza czy jest jakikolwiek wpis \"Brak danych\"\n",
+    "rows_with_missing_data = len(airport_df[(airport_df == \"Brak danych\").any(axis=1)])\n",
+    "print(rows_with_missing_data)\n",
+    "\n",
+    "# usunięcie wierszy \"Brak danych\" negacja warunku [~...] zachowuje te wiersze które nie mają wpisu \"Brak danych\"\n",
+    "rows_with_cleaned_data = airport_df[~(airport_df == \"Brak danych\"). any(axis=1)]\n",
+    "print(rows_with_cleaned_data.shape)\n",
+    "\n",
+    "\n",
+    "# zapisanie ramki danych po usunięciu braków\n",
+    "rows_with_cleaned_data.to_csv(os.path.join(output_directory, \"airport_df_cleaned.csv\"), index=False, encoding='utf-8')\n",
+    "print(rows_with_cleaned_data.shape)"
    ],
-   "outputs": [],
-   "execution_count": null
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Zapisano plik airport_data.csv\n",
+      "(104, 4)\n",
+      "Index(['ORIGIN_AIRPORT_ID', 'DISPLAY_AIRPORT_NAME', 'ORIGIN_CITY_NAME',\n",
+      "       'NAME'],\n",
+      "      dtype='object')\n",
+      "ORIGIN_AIRPORT_ID       0\n",
+      "DISPLAY_AIRPORT_NAME    0\n",
+      "ORIGIN_CITY_NAME        0\n",
+      "NAME                    0\n",
+      "dtype: int64\n",
+      "\n",
+      "***   *** ***\n",
+      "7\n",
+      "(97, 4)\n",
+      "(97, 4)\n"
+     ]
+    }
+   ],
+   "execution_count": 331
   },
   {
    "cell_type": "markdown",
@@ -188,13 +378,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2025-01-04T22:04:38.774577Z",
+     "start_time": "2025-01-04T22:04:38.762860Z"
+    }
+   },
    "source": [
     "airport_df_expected_shape = (97, 4)\n",
-    "assert airport_df_expected_shape == airport_df.shape"
-   ]
+    "assert airport_df_expected_shape == rows_with_cleaned_data.shape"
+   ],
+   "outputs": [],
+   "execution_count": 339
   },
   {
    "cell_type": "markdown",
@@ -205,10 +400,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "jupyter": {
+     "is_executing": true
+    }
+   },
+   "source": "",
    "outputs": [],
-   "source": []
+   "execution_count": null
   },
   {
    "cell_type": "markdown",
