--- a/PORTFOLIO/Pliki_do_Portfolio_Lab/notebooks/01_Pobieranie_danych.ipynb
+++ b/PORTFOLIO/Pliki_do_Portfolio_Lab/notebooks/01_Pobieranie_danych.ipynb
@@ -401,13 +401,17 @@
   {
    "cell_type": "code",
    "metadata": {
-    "jupyter": {
-     "is_executing": true
+    "ExecuteTime": {
+     "end_time": "2025-01-04T22:21:20.319105Z",
+     "start_time": "2025-01-04T22:21:20.302496Z"
     }
    },
-   "source": "",
+   "source": [
+    "# plik airport_df po oczyszczeniu u mnie zapisany powyżej jako: airport_df_cleaned.csv\n",
+    "rows_with_cleaned_data.to_csv(os.path.join(output_directory, \"airport_list.csv\"), index=False, encoding='utf-8')\n"
+   ],
    "outputs": [],
-   "execution_count": null
+   "execution_count": 342
   },
   {
    "cell_type": "markdown",
